--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./src/index.js"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.9",
     "html-to-md": "^0.3.9",
     "nodemon": "^2.0.7",
